      - Invoked socket.create_connection() without source_address, if running
        on Python 2.6.
      (Andreas Maier)

     * Fixed bug where HTTP body was attempted ot be read when CIMError header
       is set, causing a hang.  (Andreas Maier)

     * Added CIM-XML declaration support for alternative PyWBEM client based
       on twisted.  (Andreas Maier)
 
  TESTING:

    * Added support for running the unit test cases without having to be in the
      testsuite directory. This was done by setting up the DTD_FILE path
      correctly for any XML tests.  (Andreas Maier)

    * Improved the quality of assertion messages issued when testcases fail, to
      include context information and types.  (Andreas Maier)

    * Added docstrings to test cases.  (Andreas Maier)

    * Added testcases for CIMProperty.__init__() to be comprehensive.
      (Andreas Maier)

    * In XML validation tests, added the expected XML root element.
      (Andreas Maier)

    * Added a header to any error messages issued by xmllint.  (Andreas Maier)

    * Fix: Merged stderr into stdout for the xmllint invocation, xmllint error
      messages go to stderr and had been dropped before.  (Andreas Maier)

    * Fix: The "mkdir -p ..:" command in the comfychair testcase constructor
      created subdirectories named "-p" when running on Windows; replaced that
      command with os.makedirs().  (Andreas Maier)

    * Fix: Replaced the "rm -fr ..." command in the comfychair testcase
      constructor with shutil.rmtree(), in order to better run on Windows.
      (Andreas Maier)
  
    * Fix: In comfychair._enter_rundir(), moved registration of cleanup
      function _restore_directory() to the end, so cleanup happens only if no
      errors happened.  (Andreas Maier)

    * Fixed a bug in pywbem/trunk/testsuite/test_tupleparse.py in function
      ParseCIMProperty.runtest(), where the use of real tab characters caused